syntax = "proto3";

package kvstore.v1;

option go_package = "github.com/khuongnguyenBlue/kvstore/pkg/pb";

service KVStore {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
  optional int64 ttl_seconds = 3;
}

message SetResponse {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
  bool existed = 2;
}

message ListRequest {
  optional int32 limit = 1;
}

message ListResponse {
  repeated KeyValuePair pairs = 1;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}
